--- a/index.html
+++ b/index.html
@@ -58,9 +58,334 @@
         <button class="btn">Запросить смету</button>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-3">Паушальный взнос
+        от 400 000 руб.
+      </div>
+      <div class="col-md-3">Окупаемость
+        до 19 месяцев
+      </div>
+      <div class="col-md-3">Окупаемость
+        до 19 месяцев
+      </div>
+      <div class="col-md-3">Ежемесячное
+        роялти от 2%
+        <span class="page-header__action">Акция 0%</span>
+      </div>
+    </div>
   </div>
   </div>
 </header>
+<section class="total-earnings">
+  <div class="container">
+    <div class="total-earnings__numbets">37 476 453<span class="ruble"></span></div>
+    <p class="total-earnings__description">Суммарный заработок 3-х магазинов сети Руль за последние 12 месяцев
+      Данные обновляются раз в 24 часа из базы 1С — Конфигурации «Руль»</p>
+  </div>
+</section>
+<section class="format">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Форматы магазинов «Руль»</h2>
+        <p class="subtitle">Формат магазина автозапчастей может быть разных форматов, от небольшого магазина с одним
+          продавцом, до большого маркета с большим штатом, но основное объединяющее правило — это грамотно
+          сформированное наличие автозапчастей на складе, которое и определяет то, сколько вы будете зарабатать.
+          Предлагаем вам ознакомиться с 3-мя основными форматами: </p>
+      </div>
+      <div class="col-md-4">
+        <div class="big-number">45</div>
+        <div class="number-subtitle">
+          Дней на старт
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 format-item">
+        <h3 class="format-item__titel">
+          Формат «Мини»
+        </h3>
+        <div class="format-item__subtitle">
+          Хороший старт для большого
+          автомобильного бизнеса.
+        </div>
+        <img src="#" width="350" alt="img-mini">
+        <div class="format-item__cost">Инвестиции 2,8 млн. руб.</div>
+        <button class="btn format-item__btn">Запросить смету</button>
+      </div>
+      <div class="col-md-4 format-item">
+        <h3 class="format-item__titel">
+          Формат «Стандарт»
+        </h3>
+        <div class="format-item__subtitle">
+          Достойный магазин
+          с большим наличием.
+        </div>
+        <img src="#" width="350" alt="img-stand">
+        <div class="format-item__cost">Инвестиции 4,6 млн. руб.</div>
+        <button class="btn format-item__btn">Запросить смету</button>
+      </div>
+      <div class="col-md-4 format-item">
+        <h3 class="format-item__titel">
+          Формат «Макси»
+        </h3>
+        <div class="format-item__subtitle">
+          Магазин с доходностью
+          от 1 000 000 рублей в месяц.
+        </div>
+        <img src="#" width="350" alt="img-maxi">
+        <div class="format-item__cost">Инвестиции 6,8 млн. руб.</div>
+        <button class="btn format-item__btn">Запросить смету</button>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="chains-stores">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Сеть магазинов
+          автозапчастей «Руль»</h2>
+        <p class="subtitle">Сеть магазинов автозапчастей руль «Руль» основана в 2008 году в городе Липецке, с населением
+          500 00 человек. На текущий момент это крупнейшей ритейлер автозапчастей в Липецке со штатом более 30 человек,
+          с гигантским наличием, красивыми магазинами и лучшим персоналом в городе. </p>
+
+      </div>
+      <div class="col-md-4">
+        <div class="big-number">2008</div>
+        <div class="number-subtitle">
+          Год открытия первого
+          магазина «Руль»
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        <div class="chains-stores__slider">
+          <img src="" alt="1">
+          <img src="" alt="1">
+          <img src="" alt="1">
+          <img src="" alt="1">
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="chains-stores__video">
+          video
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 icons">
+
+      </div>
+    </div>
+  </div>
+</section>
+<section class="essence">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Суть бизнеса автозапчастей</h2>
+        <p class="subtitle">По сути со стороны может показаться, что владение автомагазином это нечто похожее на
+          стандартную схему: склад + точка продаж. Но вряд ли это можно назвать инвестиционным проектом, количество
+          нюансов, связанных с автомобильной темой дает возможность зарабатывать лишь тем, кто действительно готов
+          «работать». Мы знаем этот бизнес и мы разработали рабочую схему, как передать этот опыт вам.
+        </p>
+      </div>
+      <div class="col-md-4">
+        <div class="qote">«Это не инвестиции
+          — надо пахать»
+        </div>
+        <div class="qote__subtitle">Остальное мы дадим!</div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="video"></div>
+      </div>
+      <div class="col-md-6">
+        <h3>Игорь
+          Холмецкий</h3>
+        <span><a href="">vk</a></span>
+        <p>Сооснователь и соучредитель сети фирменных
+          магазинов автозапчастей «Руль», 31 год</p>
+        <p>Правильная бизнес-стратегия за 8 лет превратила магазин с наличием 450 тысяч рублей в сеть магазинов с
+          наличием товара на сумму более 30 миллионов рублей с собственным автотехцентром без привлечения кредитных
+          средств.</p>
+        <ul>
+          <li>Спикер форума «Ты — предприниматель» 2015 — 2017</li>
+          <li>Победитель конкурса такой-то</li>
+        </ul>
+        <div class="d-flex">
+          <button>Хочу пахать</button>
+          <a href="#" type="tell">8 910 355-36-12</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="sell">
+  <div class="container">
+    <div class="row">
+        <div class="col-md-4">
+          <div class="numder">
+            97<span>%</span>
+          </div>
+          <div>Автозапчастей для иномарок
+            можно купить в «Руле»</div>
+        </div>
+      <div class="col-md-8">
+        <h2>Что мы продаем?</h2>
+        <p class="subtitle">
+          Мы торгуем автозапчастями для иномарок всех популярных моделей и не ограничиваемся сегментом
+          иномарками одной страны, мы мультибрендовый магазин. В наше время, учитывая сложную политическую ситуацию, это является неоспоримым преимуществом на данном рынке.
+          Мы работаем только с проверенными и надежными поставщиками, мы уверены за качество нашего товара.
+          </p>
+      </div>
+    </div>
+    <div class="row sell-footer">
+      <div class="col-md-4">
+        <div class="">
+          «Руль» мульти-брендовый
+          магазин автозапчастей
+          для иномарок!
+        </div>
+        <div class="">
+          Наш сайт: <a href="#">rul-online.ru</a>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <div class="sell-footer__list d-flex">
+          <div class="sell-footer__item">
+            <img src="" alt="картинка">
+            <div class="description">Детали двигателя,
+              подвески,
+              трансмиссии</div>
+          </div>
+          <div class="sell-footer__item">
+            <img src="" alt="картинка">
+            <div class="description">Моторные и
+              трансмиссионные
+              масла</div>
+          </div>
+          <div class="sell-footer__item">
+            <img src="" alt="картинка">
+            <div class="description">Электрика</div>
+          </div>
+          <div class="sell-footer__item">
+            <img src="" alt="картинка">
+            <div class="description">Кузовные
+              элементы</div>
+          </div>
+          <div class="sell-footer__item">
+            <img src="" alt="картинка">
+            <div class="description">Технические
+              жидкости</div>
+          </div>
+          <div class="sell-footer__item">
+            <img src="" alt="картинка">
+            <div class="description">Расходные
+              материалы</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="care">
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <h2>Автолюбители покупауют
+        у нас не из-за цен</h2>
+      <p class="subtitle">
+        Наш продукт — не только автозапчасти, но и все остальное, что её окружает. Мы создаём светлый
+        интерьер магазина, окружаем клиента заботой в процессе продаж и продумываем все детали, чтобы
+        увеличить показатель повторных продаж.
+      </p>
+      <p>Мы помогаем людям в разных жизненных сценариях: помочь своевременно с запчастями, автосервисам починить
+        клиентский автомобиль, снабдив запчастями из наличия, а так же вовремя реагируем на новые автомобильные
+        законы и людям это нравится, например, в 2017 году лидером по продажам был знак «Шипы»      .</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4 care-item">
+      <img src="" alt="фото">
+      <div class="care-item__title">
+        Персонал
+      </div>
+      <p class="care-item__description"> Наши менеджеры всегда на рабочем месте, имеют высочайший уровень компетенции, всегда лояльны к покупателям и замотивированы на KPI.</p>
+    </div>
+    <div class="col-md-4 care-item">
+      <img src="" alt="фото">
+      <div class="care-item__title">
+        Складское наличие
+      </div>
+      <p class="care-item__description">
+        Грамотное наличие товаров, подобранное на основе опыта и базы продаж позволяет удовлетворять спрос 85% автолюбителей. С нами работают автосервисы, так как это напрямую влияет на их заработок.</p>
+    </div>
+    <div class="col-md-4 care-item">
+      <img src="" alt="фото">
+      <div class="care-item__title">
+        Location
+      </div>
+      <p class="care-item__description">
+        Все наши магазины расположены на первой линии, имеют высокий автомобильный трафик, всегда есть свободные места на парковке и нас легко найти. Зачастую рядом обязательно есть автомойка, заправка или крупный ТРЦ.</p>
+    </div>
+  </div>
+</div>
+</section>
+<div class="">
+  <div class="container">
+    <h2>Что мы вам предлагаем?</h2>
+    <p>Мы предлагаем вам открыть собственный фирменный
+      магазин автозапчастей по франшизе «Руль» в вашем городе. </p>
+  </div>
+
+</div>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <h2>Что вы получите?</h2>
+        <p class="subtitle">
+          Мы, как никто другой, знаем, как важная поддержка на старте в бизнесе, нам так её не хватало в далеком 2008 году. Наша задача сегодня — помочь вам не совершить банальных ошибок, которые так больно отражаются на бизнес-счете предпринимателя. Давайте разберемся с основными аспектами нашего будущего сотрудничества:
+        </p>
+        <h3>Поможем с подбором помещения</h3>
+        <p>Со слов Чичваркина, основателя сети «Евросеть»,  залог успеха ритейла это: Location,
+          location и … location. </p>
+        <p>Мы на собственном опыте знаем, как это важно и как будет тяжело, если совершить ошибку
+          на старте, выбрав плохое место.</p>
+        <ul>
+          <li>Расскажем как правильно подобрать помещение</li>
+          <li>Проведем аудит всех подобранных вами помещений</li>
+          <li>Не дадим вам подписать документы на аренду с невыгодными условиями</li>
+          <li>Поможем провести переговоды с арендодателем для снижения оплаты</li>
+        </ul>
+        <p>Кроме этого, после успешных переговоров и подписания документов, мы разработаем
+          планировочное решение торгового зала и склада, дадим рекомендации по ремонту,
+          подскажем как не ошибиться в выборе подрядчика. </p>
+        <div class="d-flex">
+          <div class="col-md-6"><img src="#" alt="фото"></div>
+          <div class="col-md-6"><img src="#" alt="фото"></div>
+        </div>
+        <p>В итоге, после проведения косметических ремонтных работ, вы получите готовые
+          торговые и складские площади для начала деятельности ритейлера автозапчастей. </p>
+      </div>
+      <div class="col-md-4">
+        <div class="">
+          <h3>Поможем заключить
+            выгодный договор</h3>
+          <div>Наши юристы проинспектиую документы по аренде и не дадут
+            вас обмануть. </div>
+        </div>
+        <button>Запросить смету</button>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 <script src="js/svgxuse.min.js"></script>
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
