--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header class="page-header">
   <div class="container">
     <nav>
-      <a href="#" class="page-header__logo" alt="logo"></a>
+      <a href="#" class="page-header__logo"><img src="" alt="logo"></a>
       <ul class="nav justify-content-end">
         <li class="nav-item">
           <a class="nav-link active" href="#">home</a>
@@ -73,7 +73,6 @@
         <span class="page-header__action">Акция 0%</span>
       </div>
     </div>
-  </div>
   </div>
 </header>
 <section class="total-earnings">
@@ -613,6 +612,7 @@
         </p>
       </div>
     </div>
+  </div>
 </section>
 <section class="presentation">
   <div class="container">
@@ -882,7 +882,7 @@
       <div class="col-md-12">
         <div>Предоставляем вам:</div>
         <h2>Пошаговый план
-          открытия/h2>
+          открытия</h2>
           <p>Собственного магазина автозапчастей!</p>
       </div>
       <div class="col-md-12">
@@ -935,7 +935,6 @@
       </div>
     </div>
   </div>
-  </div>
 </section>
 <section class="control">
   <div class="container">
@@ -951,14 +950,20 @@
           Видео-наблюдение
           в вашем телефоне
         </h3>
-        <p>Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя! </p>
+        <p>Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже
+          запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
+          кладовщиков до руковдителя! </p>
         <p>
-          Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя!
+          Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже
+          запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
+          кладовщиков до руковдителя!
         </p>
       </div>
       <div class="col-md-7">
         <h3>Контрлируйте работу из любой точки мира</h3>
-        <p>Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и кладовщиков до руковдителя! </p>
+        <p>Описание функционала на этом экране, Разработанная на основе десятилетнего опыта проб и ошибок в продаже
+          запчастей с целью опеспечить максимальную отдачу от системы в процессе работы персонала от менеджеров и
+          кладовщиков до руковдителя! </p>
       </div>
       <div class="col-md-5">
         <img src="" alt="фото">
@@ -1025,7 +1030,7 @@
 </div>
 <div class="form">
   <div class="container">
-    <form id="contactForm" role="document">
+    <form id="contactForm">
       <div class="form-group">
         <div class="input-group">
           <input id="name" name="name" class="form-control" placeholder="ваше имя" type="text">
@@ -1040,7 +1045,7 @@
       </div>
       <div class="form-group">
         <div class="input-group">
-          <input id="phone" name="phone" class="form-control" placeholder="телефон" type="phone">
+          <input id="phone" name="phone" class="form-control" placeholder="телефон" type="tel">
           <div class="input-group-addon"><i class="fa fa-phone fa-fw"></i></div>
         </div>
       </div>
@@ -1058,7 +1063,8 @@
       </p>
       <button id="submitjoin" type="submit" class="btn btn-primary  w100" disabled="">Отправить заявку</button>
     </form>
-    <p>Отправьте заявку на получение подробного коммерческого предложения, мы вышлем вам смету на открытие магазинов в различных фарматах, с различными объемами инвестиций.</p>
+    <p>Отправьте заявку на получение подробного коммерческого предложения, мы вышлем вам смету на открытие магазинов в
+      различных фарматах, с различными объемами инвестиций.</p>
   </div>
 </div>
 <div class="slogan">
@@ -1103,9 +1109,9 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-md-4"></div>
-      <div class="col-md-4"><a href=""></a></div>
-      <div class="col-md-4"><a href=""></a></div>
+      <div class="col-md-4">© 2008-2018 Сеть магазинов «Руль»</div>
+      <div class="col-md-4"><a href="">Политика конфеденциальности</a></div>
+      <div class="col-md-4">Разработка сайта — Компания <a href="">«Бикселс»</a></div>
     </div>
   </div>
 </footer>
