--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
           <h1 class="page-header-title">ФРАНШИЗА АВТОЗАПЧАСТИ</h1>
           <div class="page-header-title__description">СЕТЬ АВТОМАГАЗИНОВ «РУЛЬ»</div>
         </div>
-        <p class="page-header__suggestion bottom-line bottom-line--header">Начните зарабатывать от 500 000 ₽ по нашим методикам уже в апреле</p>
-        <p class="page-header__description">Мы предлагаем вам открыть собственный фирменный магазин автозапчастей по франшизе «Руль» в вашем городе.</p>
+        <p class="page-header__suggestion bottom-line bottom-line--header">Начните зарабатывать от 500 000 ₽ по нашим
+          методикам уже в апреле</p>
+        <p class="page-header__description">Мы предлагаем вам открыть собственный фирменный магазин автозапчастей по
+          франшизе «Руль» в вашем городе.</p>
       </div>
       <div class="col-3">
         <div class="experience">
@@ -64,7 +66,8 @@
             вам
           </p>
           <button>Запросить смету</button>
-          <div class="experience__phone-wrapper"><a href="#" type="tel" class="phone-number experience__phone">8 910 355-36-12</a></div>
+          <div class="experience__phone-wrapper"><a href="#" type="tel" class="phone-number experience__phone">8 910
+            355-36-12</a></div>
 
         </div>
       </div>
@@ -91,7 +94,9 @@
 </header>
 <div class="total-earnings">
   <div class="total-earnings__wrapper">
-    <div class="total-earnings__numbets-wrapper"><div class="total-earnings__numbets">37 476 453<span class="total-earnings__ruble">₽</span></div></div>
+    <div class="total-earnings__numbets-wrapper">
+      <div class="total-earnings__numbets">37 476 453<span class="total-earnings__ruble">₽</span></div>
+    </div>
     <p class="total-earnings__description">Суммарный заработок 3-х магазинов сети Руль за последние 12 месяцев
       Данные обновляются раз в 24 часа из базы 1С — Конфигурации «Руль»</p>
   </div>
@@ -155,9 +160,9 @@
 </section>
 <section class="chains-stores">
   <div class="container">
-    <div class="row">
+    <div class="row chains-stores__top">
       <div class="col-md-8">
-        <h2>Сеть магазинов
+        <h2 class="bottom-line">Сеть магазинов
           автозапчастей «Руль»</h2>
         <p class="subtitle">Сеть магазинов автозапчастей руль «Руль» основана в 2008 году в городе Липецке, с населением
           500 00 человек. На текущий момент это крупнейшей ритейлер автозапчастей в Липецке со штатом более 30 человек,
@@ -165,8 +170,8 @@
 
       </div>
       <div class="col-md-4">
-        <div class="big-number">2008</div>
-        <div class="number-subtitle">
+        <div class="big-number bottom-line bottom-line--big-number">2008</div>
+        <div class="chains-stores__opening">
           Год открытия первого
           магазина «Руль»
         </div>
@@ -175,30 +180,39 @@
     <div class="row">
       <div class="col-md-8">
         <div class="chains-stores__slider">
-          <img src="" alt="1">
-          <img src="" alt="1">
-          <img src="" alt="1">
-          <img src="" alt="1">
+          <img src="" alt="фото" width="165">
+          <img src="" alt="фото" width="165">
+          <img src="" alt="фото" width="165">
+          <img src="" alt="фото" width="165">
         </div>
       </div>
       <div class="col-md-4">
         <div class="chains-stores__video">
-          video
+          <img src="/img/video1.jpg" alt="video" width="350">
+          <a href="#" class="popup-youtube chains-stores__video-title">История компании
+            за 5 минут</a>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12 icons">
-
       </div>
     </div>
   </div>
 </section>
+<div class="icons-row">
+  <div class="container ">
+    <div class="row">
+      <div class="col-12 icons">
+        <img src="/img/b4.jpg" alt="">
+      </div>
+    </div>
+  </div>
+</div>
+
 <section class="essence">
   <div class="container">
     <div class="row">
+      <div class="col-12"><h2 class="bottom-line">Суть бизнеса автозапчастей</h2></div>
+    </div>
+    <div class="row pt-3">
       <div class="col-md-8">
-        <h2>Суть бизнеса автозапчастей</h2>
         <p class="subtitle">По сути со стороны может показаться, что владение автомагазином это нечто похожее на
           стандартную схему: склад + точка продаж. Но вряд ли это можно назвать инвестиционным проектом, количество
           нюансов, связанных с автомобильной темой дает возможность зарабатывать лишь тем, кто действительно готов
@@ -206,32 +220,40 @@
         </p>
       </div>
       <div class="col-md-4">
-        <div class="qote">«Это не инвестиции
+        <div class="essence__qote">«Это не инвестиции
           — надо пахать»
         </div>
         <div class="qote__subtitle">Остальное мы дадим!</div>
       </div>
     </div>
-    <div class="row">
+    <div class="row pt-5">
       <div class="col-md-6">
-        <div class="video"></div>
+        <div class="essence__video">
+          <img src="/img/video2.jpg" alt="видео" width="540">
+          <a href="#" class="essence__video-lint">Коротко о бизнесе магазина автозапчастей рассказывает
+            Игорь Холмецкий</a>
+        </div>
       </div>
       <div class="col-md-6">
-        <h3>Игорь
-          Холмецкий</h3>
-        <span><a href="">vk</a></span>
-        <p>Сооснователь и соучредитель сети фирменных
+        <div class="essence__name-wrapper">
+          <h3 class="essence__name">Игорь
+            Холмецкий</h3>
+          <span>
+            <a href="" class="essence__name-social-link">vk</a>
+          </span>
+        </div>
+        <p class="grey-text">Сооснователь и соучредитель сети фирменных
           магазинов автозапчастей «Руль», 31 год</p>
-        <p>Правильная бизнес-стратегия за 8 лет превратила магазин с наличием 450 тысяч рублей в сеть магазинов с
+        <p class="essence__right-col-text">Правильная бизнес-стратегия за 8 лет превратила магазин с наличием 450 тысяч рублей в сеть магазинов с
           наличием товара на сумму более 30 миллионов рублей с собственным автотехцентром без привлечения кредитных
           средств.</p>
-        <ul>
-          <li>Спикер форума «Ты — предприниматель» 2015 — 2017</li>
-          <li>Победитель конкурса такой-то</li>
+        <ul class="essence__list">
+          <li class="essence__item">Спикер форума «Ты — предприниматель» 2015 — 2017</li>
+          <li class="essence__item">Победитель конкурса такой-то</li>
         </ul>
-        <div class="d-flex">
+        <div class="d-flex justify-content-between pt-2">
           <button>Хочу пахать</button>
-          <a href="#" type="tell">8 910 355-36-12</a>
+          <a href="#" type="tell" class="phone-number  phone-number--black">8 910 355-36-12</a>
         </div>
       </div>
     </div>
@@ -240,70 +262,70 @@
 <section class="sell">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
-        <div class="numder">
+      <div class="col-12 col-md-3">
+        <div class="sell__numder">
           97<span>%</span>
         </div>
-        <div>Автозапчастей для иномарок
+        <div class="sell__numder-subtitle">Автозапчастей для иномарок
           можно купить в «Руле»
         </div>
       </div>
-      <div class="col-md-8">
-        <h2>Что мы продаем?</h2>
+      <div class="col-md-9 sell__right-col">
+        <h2 class="bottom-line sell__title">Что мы продаем?</h2>
         <p class="subtitle">
           Мы торгуем автозапчастями для иномарок всех популярных моделей и не ограничиваемся сегментом
           иномарками одной страны, мы мультибрендовый магазин. В наше время, учитывая сложную политическую ситуацию, это
-          является неоспоримым преимуществом на данном рынке.
-          Мы работаем только с проверенными и надежными поставщиками, мы уверены за качество нашего товара.
+          является неоспоримым преимуществом на данном рынке.</p>
+        <p class="subtitle pt-md-0"> Мы работаем только с проверенными и надежными поставщиками, мы уверены за качество нашего товара.
         </p>
       </div>
     </div>
     <div class="row sell-footer">
-      <div class="col-md-4">
-        <div class="">
+      <div class="col-12 col-md-3">
+        <div class="sell-footer__title">
           «Руль» мульти-брендовый
           магазин автозапчастей
           для иномарок!
         </div>
-        <div class="">
-          Наш сайт: <a href="#">rul-online.ru</a>
+        <div class="sell-footer__site">
+          Наш сайт: <a href="#" class="sell-footer__site-link">rul-online.ru</a>
         </div>
       </div>
-      <div class="col-md-8">
-        <div class="sell-footer__list d-flex">
-          <div class="sell-footer__item">
-            <img src="" alt="картинка">
-            <div class="description">Детали двигателя,
+      <div class="col-12 col-md-9">
+        <div class="sell-footer__list row">
+          <div class="col-6 col-md-2 sell-footer-item">
+            <img class="sell-footer-item__img" src="/img/shell/shell1.svg" alt="картинка">
+            <div class="sell-footer-item__descriptoin">Детали двигателя,
               подвески,
               трансмиссии
             </div>
           </div>
-          <div class="sell-footer__item">
-            <img src="" alt="картинка">
-            <div class="description">Моторные и
+          <div class="col-6 col-md-2 sell-footer-item">
+            <img class="sell-footer-item__img" src="/img/shell/shell2.svg" alt="картинка">
+            <div class="sell-footer-item__descriptoin">Моторные и
               трансмиссионные
               масла
             </div>
           </div>
-          <div class="sell-footer__item">
-            <img src="" alt="картинка">
-            <div class="description">Электрика</div>
+          <div class="col-6 col-md-2 sell-footer-item">
+            <img class="sell-footer-item__img" src="/img/shell/shell3.svg" alt="картинка">
+            <div class="sell-footer-item__descriptoin">Электрика</div>
           </div>
-          <div class="sell-footer__item">
-            <img src="" alt="картинка">
-            <div class="description">Кузовные
+          <div class="col-6 col-md-2 sell-footer-item">
+            <img class="sell-footer-item__img" src="/img/shell/shell4.svg" alt="картинка">
+            <div class="sell-footer-item__descriptoin">Кузовные
               элементы
             </div>
           </div>
-          <div class="sell-footer__item">
-            <img src="" alt="картинка">
-            <div class="description">Технические
+          <div class="col-6 col-md-2 sell-footer-item">
+            <img class="sell-footer-item__img" src="/img/shell/shell5.svg" alt="картинка">
+            <div class="sell-footer-item__descriptoin">Технические
               жидкости
             </div>
           </div>
-          <div class="sell-footer__item">
-            <img src="" alt="картинка">
-            <div class="description">Расходные
+          <div class="col-6 col-md-2 sell-footer-item">
+            <img class="sell-footer-item__img" src="/img/shell/shell6.svg" alt="картинка">
+            <div class="sell-footer-item__descriptoin">Расходные
               материалы
             </div>
           </div>
@@ -316,21 +338,21 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h2>Автолюбители покупауют
+        <h2 class="bottom-line pb-1">Автолюбители покупауют
           у нас не из-за цен</h2>
-        <p class="subtitle">
+        <p class="subtitle subtitle--bold">
           Наш продукт — не только автозапчасти, но и все остальное, что её окружает. Мы создаём светлый
           интерьер магазина, окружаем клиента заботой в процессе продаж и продумываем все детали, чтобы
           увеличить показатель повторных продаж.
         </p>
         <p>Мы помогаем людям в разных жизненных сценариях: помочь своевременно с запчастями, автосервисам починить
           клиентский автомобиль, снабдив запчастями из наличия, а так же вовремя реагируем на новые автомобильные
-          законы и людям это нравится, например, в 2017 году лидером по продажам был знак «Шипы» .</p>
+          законы и людям это нравится, например, в 2017 году лидером по продажам был знак «Шипы» <span class="icon">Ш</span> .</p>
       </div>
     </div>
-    <div class="row">
+    <div class="row care-list">
       <div class="col-md-4 care-item">
-        <img src="" alt="фото">
+        <img src="/img/care/care1.jpg" width="350" alt="фото">
         <div class="care-item__title">
           Персонал
         </div>
@@ -338,7 +360,7 @@
           всегда лояльны к покупателям и замотивированы на KPI.</p>
       </div>
       <div class="col-md-4 care-item">
-        <img src="" alt="фото">
+        <img src="/img/care/care2.jpg" width="350" alt="фото">
         <div class="care-item__title">
           Складское наличие
         </div>
@@ -347,7 +369,7 @@
           автолюбителей. С нами работают автосервисы, так как это напрямую влияет на их заработок.</p>
       </div>
       <div class="col-md-4 care-item">
-        <img src="" alt="фото">
+        <img src="/img/care/care3.jpg" width="350" alt="фото">
         <div class="care-item__title">
           Location
         </div>
@@ -358,7 +380,7 @@
     </div>
   </div>
 </section>
-<div class="">
+<div class="proposal">
   <div class="container">
     <h2>Что мы вам предлагаем?</h2>
     <p>Мы предлагаем вам открыть собственный фирменный
